# test_task_users_api

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: linter-check.yml  tests.yml
alembic/: env.py
alembic/versions/: 2024_10_21_1151-9566da4d93a6_add_user_table.py
src/: deps.py  main.py  utils.py
src/core/: config.py  db.py
src/users/: crud.py  models.py  routers.py  schemas.py  services.py
tests/: conftest.py
tests/users/: test_create_user.py  test_delete_user.py  test_get_users.py  test_get_users_statistics.py  test_update_users.py
